--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,10 +12,24 @@ body {
 {
     position: relative;
     display: block;
-    top: -350px;
+    top: -300px;
     z-index: 1;
     color: white;
     text-align: center;
+    font-family: 'Tilt Warp', cursive;
+    font-size: 1.5em;
+}
+
+#sorszam
+{
+    position: relative;
+    display: block;
+    top: -270px;
+    z-index: 1;
+    color: white;
+    text-align: center;
+    font-family: 'Tilt Warp', cursive;
+    font-size: 6em;
 }
 
 .keret
